<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:background="@drawable/codebreaker_panel_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dip"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip">

            <ImageView
                android:id="@+id/color_chooser_red"
                style="@style/color_chooser_dialog_item"
                android:contentDescription="@string/red"
                android:src="@drawable/red_circle" />

            <ImageView
                android:id="@+id/color_chooser_green"
                style="@style/color_chooser_dialog_item"
                android:contentDescription="@string/green"
                android:src="@drawable/green_circle" />

            <ImageView
                android:id="@+id/color_chooser_blue"
                style="@style/color_chooser_dialog_item"
                android:contentDescription="@string/blue"
                android:src="@drawable/blue_circle" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dip"
            android:layout_marginTop="5dip">

            <ImageView
                android:id="@+id/color_chooser_yellow"
                style="@style/color_chooser_dialog_item"
                android:contentDescription="@string/yellow"
                android:src="@drawable/yellow_circle" />

            <ImageView
                android:id="@+id/color_chooser_orange"
                style="@style/color_chooser_dialog_item"
                android:contentDescription="@string/orange"
                android:src="@drawable/orange_circle" />

            <ImageView
                android:id="@+id/color_chooser_brown"
                style="@style/color_chooser_dialog_item"
                android:contentDescription="@string/brown"
                android:src="@drawable/brown_circle" />

            <ImageView
                android:id="@+id/color_chooser_empty"
                style="@style/color_chooser_dialog_item"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="9dip"
                android:layout_marginTop="9dip"
                android:layout_marginBottom="12dip"
                android:contentDescription="@string/empty"
                android:src="@drawable/empty_circle" />


        </LinearLayout>

    </LinearLayout>



</LinearLayout>
