<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_corner"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/codemaker_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/codemaker_panel"
        android:orientation="horizontal" >
    </LinearLayout>

    <ScrollView
        android:id="@+id/playfield_scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:keepScreenOn="true" >

        <LinearLayout
            android:id="@+id/codebreaker_panels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

    <include android:id="@+id/colorchooser" layout="@layout/color_chooser"/>

    <LinearLayout
        android:id="@+id/codebreaker_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/codebreaker_panel"
        android:orientation="horizontal" >
    </LinearLayout>

</LinearLayout>